--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 0.1px solid grey;
+  border-bottom: 20px solid #0d488b;
   position: fixed;
   width: 100%;
   margin-top: 0px;
@@ -26,18 +26,49 @@ header a,
 header button {
   font-size: 1rem;
   display: inline-block;
-  background-color: grey;
-  border: 2px solid white;
-  margin: 1rem;
+  background-color: rgb(154, 227, 240);
+  border: 2px solid blue;
+  margin: 2rem;
   padding: 0.5rem;
   text-decoration: none;
-  color: blue;
+  color: black;
   width: 50px;
   cursor: pointer;
-  border-radius: 10px; 
+  border-radius: 80px; 
+}
+.header-btn:hover {
+  background-color: blue;
+  color: white;
+  border: none;
 }
 
+.header-btn-logout {
+  padding-right: 80px;
+  color: hsl(7, 100%, 50%);
+}
+
+
 .nav {
-  background-color: rgb(53, 52, 52);
-  height: 65px;
+  background-color: rgb(62, 167, 180);
+  height: 50px;
+}
+
+form {
+  background-color: rgb(62, 167, 180);
+  border: 0.1px solid blue;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  margin: 0 auto;
+  padding: 5rem 5rem;
+}
+
+
+.btn-login, .btn-signup {
+  height: 30px;
+  margin-top: 40px;
+  background-color: rgb(67, 168, 41);
+  border-radius: 20px;
+  cursor: pointer;
 }
