--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,74 +1,128 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  color: black;
+  }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 20px solid #0d488b;
+  border-bottom: 3px solid #28d330;
   position: fixed;
   width: 100%;
-  margin-top: 0px;
 }
 
-header a,
-header button {
+header a, header button {
   font-size: 1rem;
-  display: inline-block;
-  background-color: rgb(154, 227, 240);
-  border: 2px solid blue;
+  background-color: rgb(157, 243, 99);
+  border: 2px solid rgb(22, 22, 224);
   margin: 2rem;
   padding: 0.5rem;
   text-decoration: none;
   color: black;
-  width: 50px;
+  width: 2px;
   cursor: pointer;
-  border-radius: 80px; 
+  border-radius: 77px; 
 }
+
 .header-btn:hover {
   background-color: blue;
   color: white;
-  border: none;
 }
 
 .header-btn-logout {
-  padding-right: 80px;
+  padding-right: 60px;
   color: hsl(7, 100%, 50%);
 }
 
-
-.nav {
-  background-color: rgb(62, 167, 180);
-  height: 50px;
-}
-
-form {
-  background-color: rgb(62, 167, 180);
-  border: 0.1px solid blue;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  width: 250px;
-  margin: 0 auto;
-  padding: 5rem 5rem;
-}
-
-
 .btn-login, .btn-signup {
-  height: 30px;
-  margin-top: 40px;
+  margin: 0 auto;
   background-color: rgb(67, 168, 41);
   border-radius: 20px;
   cursor: pointer;
+}
+
+.nav {
+  background-color: rgb(159, 248, 171);
+  height: 70px;
+  
+}
+
+form {
+  background-color: whitesmoke;
+  border: 2px solid #28d330;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 120px;
+  margin: 0 auto;
+  padding: 2rem 2rem;
+  margin-right: 20px !important;
+}
+
+.card {
+    margin: 1rem;
+    float: left;
+    width: 33.33%;
+    padding: 5px;    
+    }
+
+.card img {
+    width: 100%;
+    }
+    
+.card button {
+    font-size: 1rem;
+    background-color: rgb(157, 243, 99);
+    border: 2px solid rgb(22, 22, 224);
+    margin: 0.5rem;
+    padding: 0.5rem;
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+    border-radius: 77px;
+    }
+    
+  @media (min-width: 7px) {
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    }
+    
+  @media (max-width: 500px) {
+      .cards {
+        width: 100%;
+    }}
+    
+  .card {
+    width: calc(100% - 2rem);
+    }}
+    
+  @media (min-width: 1024px) {
+  .card {
+    width: calc(100% - 2rem);
+    }}
+    
+  @media (min-width: 1200px) {
+  .card {
+    width: calc(20% - 2rem);
+    }}
+
+  .card {
+  margin: 1rem;
+    }
+
+  button {
+  background-color: #04AA6D;
+  color: white;
+  padding: 10px 10px;
+  margin: 1px 0;
+  border: none;
+  cursor: pointer;
+  width: auto;
+   }
+
+img{
+  height: auto;
+  max-width: 100%;
+  display: block;
 }
